# agent-dock

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json
docs/: AI_TOOLING_MATRIX.md  (+16 more)
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/commands/: agents.rs  marketplace.rs  mcp.rs  mod.rs  skills.rs
src-tauri/src/dto/: agents.rs  marketplace.rs  mcp.rs  mod.rs  skills.rs
src-tauri/src/infrastructure/: mod.rs  skill_fs.rs
src-tauri/src/infrastructure/mcp/: inspector.rs  mod.rs
src-tauri/src/infrastructure/persistence/: json_agent_repository.rs  json_marketplace_install_repository.rs  mod.rs
src-tauri/src/infrastructure/utils/: fs.rs  path.rs
src-tauri/src/persistence/: managed_agents_store.rs  marketplace_cache_store.rs  marketplace_install_store.rs  mod.rs
src-tauri/src/plugins/: system_tray.rs
src-tauri/src/repositories/: agent_repository.rs  errors.rs  marketplace_install_repository.rs  mod.rs
src-tauri/src/scanners/: agent_type_scanner.rs  mcp_scanner.rs  mod.rs  provider_scanner.rs  skill_markdown.rs  skill_scanner.rs  skillssh_scanner.rs
src-tauri/src/scanners/mcp/: claude.rs  codex.rs  common.rs  factory.rs  gemini.rs  mod.rs  opencode.rs  traits.rs
src-tauri/src/services/: agent_discovery_service.rs  errors.rs  marketplace_service.rs  mcp_discovery_service.rs  mcp_service.rs  mod.rs  skill_discovery_service.rs  skill_operations_service.rs
src-tauri/src/utils/: mod.rs  path.rs
src-tauri/tests/: agent_flow.rs
(+69 files in other folders)
